Added: mahapps.metro library, added: progress ring

--- a/RepositoryParser/RepositoryParser/Properties/Resources.pl-PL.resx
+++ b/RepositoryParser/RepositoryParser/Properties/Resources.pl-PL.resx
@@ -437,4 +437,8 @@
     <value>Nie zmieniono</value>
     <comment>ChartOfChangesChart</comment>
   </data>
+  <data name="ProgressBarText" xml:space="preserve">
+    <value>Trwa otwieranie repozytorium, proszę czekać...</value>
+    <comment>MainPage</comment>
+  </data>
 </root>
