--- a/RepositoryParser/RepositoryParser/Properties/Resources.resx
+++ b/RepositoryParser/RepositoryParser/Properties/Resources.resx
@@ -444,4 +444,8 @@
     <value>Data loading, please wait...</value>
     <comment>MainPage</comment>
   </data>
+  <data name="ClearingDataBase" xml:space="preserve">
+    <value>Clearing data base, please wait...</value>
+    <comment>main</comment>
+  </data>
 </root>
