Added loading data string resource, cleared code

--- a/RepositoryParser/RepositoryParser/Properties/Resources.pl-PL.resx
+++ b/RepositoryParser/RepositoryParser/Properties/Resources.pl-PL.resx
@@ -445,4 +445,7 @@
     <value>Trwa czyszczenie bazy danych, proszę czekać...</value>
     <comment>main</comment>
   </data>
+  <data name="DataLoadingStatus" xml:space="preserve">
+    <value>Trwa ładowanie danych, proszę czekać...</value>
+  </data>
 </root>
