--- a/RepositoryParser/RepositoryParser/Properties/Resources.resx
+++ b/RepositoryParser/RepositoryParser/Properties/Resources.resx
@@ -263,7 +263,7 @@
     <comment>ChartPage</comment>
   </data>
   <data name="LocalAdress" xml:space="preserve">
-    <value>Or pick from hard disc</value>
+    <value>Pick adress from hard disc</value>
     <comment>MainPage</comment>
   </data>
   <data name="MainWindowTitle" xml:space="preserve">
@@ -450,5 +450,9 @@
   </data>
   <data name="DataLoadingStatus" xml:space="preserve">
     <value>Data loading, please wait...</value>
+  </data>
+  <data name="PickRepositoryType" xml:space="preserve">
+    <value>Pick repostory type:</value>
+    <comment>MainPage</comment>
   </data>
 </root>
