remastered window structure

--- a/RepositoryParser/RepositoryParser/Properties/Resources.pl-PL.resx
+++ b/RepositoryParser/RepositoryParser/Properties/Resources.pl-PL.resx
@@ -460,4 +460,8 @@
     <value>Repozytorium SVN</value>
     <comment>MainPage</comment>
   </data>
+  <data name="ClearFiltersBtn" xml:space="preserve">
+    <value>Wyczyść filtry</value>
+    <comment>MainWindow</comment>
+  </data>
 </root>
