--- a/RepositoryParser/RepositoryParser/Properties/Resources.resx
+++ b/RepositoryParser/RepositoryParser/Properties/Resources.resx
@@ -467,4 +467,7 @@
     <value>Clear all filters</value>
     <comment>MainWindow</comment>
   </data>
+  <data name="FileName" xml:space="preserve">
+    <value>File name</value>
+  </data>
 </root>
