Added: overall summary collection, string resources

--- a/RepositoryParser/RepositoryParser/Properties/Resources.pl-PL.resx
+++ b/RepositoryParser/RepositoryParser/Properties/Resources.pl-PL.resx
@@ -467,6 +467,10 @@
   <data name="FileName" xml:space="preserve">
     <value>Nazwa pliku</value>
   </data>
+  <data name="AddedChart" xml:space="preserve">
+    <value>Dodane linie</value>
+    <comment>freq</comment>
+  </data>
   <data name="AnalysisWindowVie" xml:space="preserve">
     <value>Analiza</value>
   </data>
@@ -475,6 +479,10 @@
   </data>
   <data name="DayActivityView" xml:space="preserve">
     <value>Aktywność dzienna</value>
+  </data>
+  <data name="DeletedChart" xml:space="preserve">
+    <value>Usunięte linie</value>
+    <comment>freq</comment>
   </data>
   <data name="DiffView" xml:space="preserve">
     <value>Różnice</value>
@@ -489,8 +497,20 @@
   <data name="MainWindowView" xml:space="preserve">
     <value>Repository Analyser</value>
   </data>
+  <data name="ModifiedChart" xml:space="preserve">
+    <value>Zmodyfikowane linie</value>
+    <comment>freq</comment>
+  </data>
   <data name="MonthActivity" xml:space="preserve">
     <value>Akywność miesięczna</value>
+  </data>
+  <data name="OverallChart" xml:space="preserve">
+    <value>Wykres całościowy</value>
+    <comment>freq</comment>
+  </data>
+  <data name="Summary" xml:space="preserve">
+    <value>Podsumowanie</value>
+    <comment>freq</comment>
   </data>
   <data name="UserActivityView" xml:space="preserve">
     <value>Aktywność użytkowników</value>
