--- a/RepositoryParser/RepositoryParser/Properties/Resources.resx
+++ b/RepositoryParser/RepositoryParser/Properties/Resources.resx
@@ -527,4 +527,10 @@
   <data name="ExportFailed" xml:space="preserve">
     <value>Export Failed</value>
   </data>
+  <data name="Chart" xml:space="preserve">
+    <value>Chart</value>
+  </data>
+  <data name="List" xml:space="preserve">
+    <value>List</value>
+  </data>
 </root>
