--- a/RepositoryParser/RepositoryParser/Properties/Resources.resx
+++ b/RepositoryParser/RepositoryParser/Properties/Resources.resx
@@ -533,4 +533,10 @@
   <data name="List" xml:space="preserve">
     <value>List</value>
   </data>
+  <data name="CodeFrequencyAnalyse" xml:space="preserve">
+    <value>Code frequency analyse</value>
+  </data>
+  <data name="CoutOfCommitsAnalyse" xml:space="preserve">
+    <value>Count of commits analyse</value>
+  </data>
 </root>
