--- a/RepositoryParser/RepositoryParser/Properties/Resources.resx
+++ b/RepositoryParser/RepositoryParser/Properties/Resources.resx
@@ -554,4 +554,8 @@
   <data name="DataUndockedInfo" xml:space="preserve">
     <value>Close the new presentation window to restore the old presentation view</value>
   </data>
+  <data name="NoDataToDisplay" xml:space="preserve">
+    <value>No data to display</value>
+    <comment>Presentation</comment>
+  </data>
 </root>
