--- a/RepositoryParser/RepositoryParser/Properties/Resources.resx
+++ b/RepositoryParser/RepositoryParser/Properties/Resources.resx
@@ -577,4 +577,7 @@
   <data name="AnalysingDataMessage" xml:space="preserve">
     <value>Analysing collected data. Please wait...</value>
   </data>
+  <data name="ContiniousAnalyse" xml:space="preserve">
+    <value>Continious analyse</value>
+  </data>
 </root>
