Added search box in all file analysis

--- a/RepositoryParser/RepositoryParser/Properties/Resources.pl-PL.resx
+++ b/RepositoryParser/RepositoryParser/Properties/Resources.pl-PL.resx
@@ -573,4 +573,7 @@
   <data name="ContiniousAnalyse" xml:space="preserve">
     <value>Analiza ciągła</value>
   </data>
+  <data name="Search" xml:space="preserve">
+    <value>Search</value>
+  </data>
 </root>
